# osquery-extensions

./: .gitignore  LICENSE  MODULE.bazel  README.md  go.mod  go.sum
cmd/flatpak/: BUILD.bazel  main.go
cmd/pacman/: BUILD.bazel  main.go
cmd/x509_certificates/: BUILD.bazel  main.go
extcommon/: BUILD.bazel  extcommon.go  util.go
flatpak/: BUILD.bazel  data.go  plugin.go  registry.go
pacman/: BUILD.bazel  pacman.go  typed_columns.go
x509_certificates/: BUILD.bazel  plugin.go  plugin_test.go
x509_certificates/testdata/: all-crts.crt  ecdsa-p256.crt  ecdsa-p384.crt  ecdsa-p521.crt  generate.sh  rsa-2048.crt  rsa-4096.crt
