bazel_dep(
	name = "rules_go",
	version = "0.55.1",
)

bazel_dep(
	name = "gazelle",
	version = "0.44.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
	go_deps,
	"com_github_gobwas_glob",
	"com_github_osquery_osquery_go",
	"com_github_chrisportman_go_gvariant",
	"com_github_hashicorp_golang_lru_v2",
	"com_github_linuxdeepin_go_lib",
	"com_github_jguer_go_alpm_v2",
)