load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pacman_lib",
    srcs = ["main.go"],
    importpath = "go.fuhry.dev/osquery/pacman/cmd/pacman",
    visibility = ["//visibility:private"],
    deps = [
        "//extcommon",
        "//pacman",
    ],
)

go_binary(
    name = "pacman",
    embed = [":pacman_lib"],
    visibility = ["//visibility:public"],
)
